--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <input type="password" placeholder="Enter Password">
         <input type="submit" value="Log In">
         <a href="#">Forgot Password?</a><br>
-        <a href="#">SignUp######</a>
+        <a href="#">SignUp</a>
       </form>
     </div>
   </body>
